Ugly hack to fix dark mode background color

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -47,7 +47,7 @@ body, html {
 
 body {
     /*overflow-y: hidden; FIXME [AK] Commented out because it breaks Chrome scrolling */
-    background-color: #333;
+    background-color: #333 !important;
 }
 
 a {
